--- a/Index.html
+++ b/Index.html
@@ -1,9 +1,69 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title></title>
+	<title>Ella's Website</title>
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Open+Sans+Condensed:wght@300&display=swap" rel="stylesheet">
+
+
+
+<style type="text/css">
+	
+
+	#menu{
+	width: 100%;
+	height: 200px;
+	margin: 0px; 
+	background-color: silver;
+}
+
+	#waving{
+	width: 50%;
+	height: 300px;
+	background-color: khaki;
+	background-image: url(https://i.ytimg.com/vi/Rn_wLVHF0AA/mqdefault.jpg);
+	background-position: center;
+	background-size:cover;
+}
+
+	#Journal{
+	width: 15%;
+	height: 10px;
+	font-family: 'Open Sans Condensed', sans-serif;
+	font-size: 250%;
+	top: 10%;
+	}
+
+
+</style>
+
 </head>
+
+
+
 <body>
-hello, me from future
+
+
+	
+
+	<div id="menu">
+		
+	</div>
+
+	<center><div id="waving">
+
+	</div>
+	</center>
+
+	<center><div id="Journal">
+		<a>Journal</a>
+	</div>
+	</center>
+	<div id="About Me"></div>
+	<div id="Projects"></div>
+	<div id="Home"></div>
+
+
 </body>
 </html>
