--- a/Index.html
+++ b/Index.html
@@ -19,24 +19,30 @@
 }
 
 	#waving{
-	width: 50%;
-	height: 300px;
-	background-color: khaki;
-	background-image: url(https://i.ytimg.com/vi/Rn_wLVHF0AA/mqdefault.jpg);
+	width: 100%;
+	height: 400px;
+	background-color: white;
+	background-image: url(wavingstill.png);
 	background-position: center;
-	background-size:cover;
+	background-repeat: no-repeat;
+	background-size: contain;
+
+	
 }
 
+
 	#Journal{
-	width: 15%;
-	height: 10px;
+	width: 100%;
+	height: 100px;
 	font-family: 'Open Sans Condensed', sans-serif;
-	font-size: 250%;
-	top: 10%;
+	font-size: 300%;
+	
 	}
 
 
 </style>
+
+	
 
 </head>
 
@@ -48,21 +54,15 @@
 	
 
 	<div id="menu">
+		<a href="journal.html">Journal</a>
+		<a href="aboutme.html">About Me</a>
+		<a href="project.html">Project</a>
+	</div>
+
+	<center><div id="waving"></div></center>
 		
-	</div>
 
-	<center><div id="waving">
-
-	</div>
-	</center>
-
-	<center><div id="Journal">
-		<a>Journal</a>
-	</div>
-	</center>
-	<div id="About Me"></div>
-	<div id="Projects"></div>
-	<div id="Home"></div>
+	<center><div id="Journal"></div></center>
 
 
 </body>
