--- a/index.html
+++ b/index.html
@@ -26,6 +26,8 @@
 	background-position: center;
 	background-repeat: no-repeat;
 	background-size: contain;
+	position: absolute;
+	top: 10%
 
 	
 }
@@ -39,7 +41,9 @@
 	
 	}
 
-
+body{
+	margin: 0px;
+	}
 </style>
 
 	
@@ -57,6 +61,7 @@
 		<a href="journal.html">Journal</a>
 		<a href="aboutme.html">About Me</a>
 		<a href="project.html">Project</a>
+		<a href="Animation.html">Animation</a>
 	</div>
 
 	<center><div id="waving"></div></center>
