write a message to yourself

--- a/Animation.html
+++ b/Animation.html
@@ -36,9 +36,12 @@
 
 	}
 
-@keyframes ball {
-  from {top: 0px;}
-  to {top: 200px;}
+@keyframes movingball {
+  0%   {top: 0px;}
+  25%  {top: 200px;}
+  50%  {top: 100px;}
+  75%  {top: 200px;}
+  100% {top: 0px;}
 }
 
 </style>
