--- a/javascriptTest.html
+++ b/javascriptTest.html
@@ -10,16 +10,16 @@
 function pattern (){
 	var x = document.createElement('div');
 	document.body.appendChild(x);
-	x.style.width = "150px";
-	x.style.height = "170px";
-	x.style.backgroundImage = "url(https://images.fineartamerica.com/images/artworkimages/mediumlarge/3/optical-illusion-3d-pattern-jodoto-design.jpg)";
+	x.style.width = "300px";
+	x.style.height = "300px";
+	x.style.backgroundImage = "url(https://c.tenor.com/DqdCitr-57MAAAAC/cheshire-cat-alice-in-wonderland.gif)";
 
 	x.style.backgroundSize = "contain";
-	x.style.backgroundRepeat = "no-repeat"
+	x.style.backgroundRepeat = "no-repeat";
 	x.style.display = "inline-block";
 }
 
-	setInterval(pattern, 1000)
+	setInterval(pattern, 500)
 
 
 </script>
