--- a/journal.html
+++ b/journal.html
@@ -2,10 +2,13 @@
 <html>
 <head>
 	<title>Journal</title>
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Open+Sans+Condensed:wght@300&display=swap" rel="stylesheet">
 
 	<style type="text/css">
 		
-		#JournalEntryColor{
+		#JournalEntryGif{
 		width: 45%;
 		height: 300px;
 		background-color: azure;
@@ -16,28 +19,38 @@
 		}
 
 		
-
+	
 
 	</style>
 </head>
 <body>
-<center><div id="JournalEntryColor"></div></center>
+<center><div id="JournalEntryGif"></div></center>
 
 
 <p>
 Journal Entry 1:
-I’ve learned a lot about the ‘theory’ (if you could call it that) of html and CSS, but I’m not very good at applying it. We learned about the elements, the style, the structure of making a website, and many different coding words like “div” or “a” or “href”. I feel a bit frustrated by it because I think I’m doing things correctly, but nothing is really working, and I don’t know what’s wrong. I am currently working on setting up my CS1 website, but like I said in the earlier sentence, it is a bit frustrating. I’m excited to actually get my code to work, because I feel like I will be extremely proud and happy by that. My goals in the next week or two are to get my website up and running, and also start a new project, because I feel like that will be fun. </p>
+I’ve learned a lot about the ‘theory’ (if you could call it that) of html and CSS, but I’m not very good at applying it. We learned about the elements, the style, the structure of making a website, and many different coding words like “div” or “a” or “href”. I feel a bit frustrated by it because I think I’m doing things correctly, but nothing is really working, and I don’t know what’s wrong. I am currently working on setting up my CS1 website, but like I said in the earlier sentence, it is a bit frustrating. I’m excited to actually get my code to work, because I feel like I will be extremely proud and happy by that. My goals in the next week or two are to get my website up and running, and also start a new project, because I feel like that will be fun. 
+
+</p>
 
 <p>
 
 Journal Entry 2:
 	We keep on learning new words the more we use html or CSS, similar to using a new language. I am definitely feeling more comfortable with using commands like div, or stuff within the style section in general. I’m currently working on adding detail to my website, because I have the basic structure of it down, I just need to add more. I am excited to make more pages and actually put stuff in those pages on my website. My goals for the next few weeks are to actually get my home and journal page to look semi decent. 
+	
 </p>
 
 <p>
 	
 	Journal Entry 3:
 	I'm currently working on making my website better and making a new animation, which I am having a bit of trouble with. I am really glad that I was able to put my gif on my journal page, though. I still really want to add detail to my website, because I feel like it would be fun. We also learned an introduction to javascript, which I am excited to use in the future. I really wish that I could change the font of the journal page to something nicer. 
+
+
+</p>
+
+<p>
+	Journal Entry 4:
+	I am currently working on fixing up my website so it actually looks like a website. I am also working on understanding on how to do functions in javascript. I don't really know what to write for journal entries so...
 </p>
 
 </body>
