--- a/index.html
+++ b/index.html
@@ -18,32 +18,74 @@
 	background-color: silver;
 }
 
+a{
+	font-family: 'Open Sans Condensed', sans-serif;
+	text-decoration: none;
+	font-size: 30px
+}
+
 	#waving{
-	width: 100%;
-	height: 400px;
+	width: 20%;
+	height: 150px;
 	background-color: white;
 	background-image: url(wavingstill.png);
 	background-position: center;
 	background-repeat: no-repeat;
 	background-size: contain;
-	position: absolute;
-	top: 10%
-
-	
+	position: relative;
 }
 
 
-	#Journal{
-	width: 100%;
-	height: 100px;
-	font-family: 'Open Sans Condensed', sans-serif;
-	font-size: 300%;
-	
+	#waving:hover{
+		background-image: url(hello-hi.gif);
 	}
+
+	#word{
+	width: 100%;
+	height: 500px;
+	background-color: skyblue;
+	background-position: relative;
+	bottom: 500px;
+	}
+
+	a:link {
+  color: cadetblue;
+  background-color: transparent;
+  text-decoration: none;
+}
+
+a:visited {
+  color: cadetblue;
+  background-color: transparent;
+  text-decoration: none;
+
+
 
 body{
 	margin: 0px;
 	}
+
+	#stuff{
+	height: 200px;
+	width: 200px
+}
+
+href #aboutme.html
+
+<p>
+
+WELCOME TO MY WEBSITE!
+
+</p>
+
+	#journal{
+	height: 300px;
+	width: 300px;
+	background-position: relative;
+	left: 5px;
+	}
+
+
 </style>
 
 	
@@ -57,17 +99,24 @@ body{
 
 	
 
-	<div id="menu">
-		<a href="journal.html">Journal</a>
-		<a href="aboutme.html">About Me</a>
-		<a href="project.html">Project</a>
-		<a href="Animation.html">Animation</a>
+	<center>
+
+<div id="menu">
+	<div id="container">
+		<div id="journal" class ="link"><a href="journal.html">Journal</a></div>
+		<div id = "projects" class ="link"><a href="project.html">Projects</a></div>
+
 	</div>
+</div>
+
+</center>
 
 	<center><div id="waving"></div></center>
-		
 
-	<center><div id="Journal"></div></center>
+	<div id="word"></div>
+	<div id="stuff"></div>
+
+		
 
 
 </body>
