edited website main page

--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@ WELCOME TO MY WEBSITE!
 	#journal{
 	height: 300px;
 	width: 300px;
-	background-position: relative;
+	background-position: absolute;
 	left: 5px;
 	}
 
