--- a/journal.html
+++ b/journal.html
@@ -53,5 +53,12 @@ Journal Entry 2:
 	I am currently working on fixing up my website so it actually looks like a website. I am also working on understanding on how to do functions in javascript. I don't really know what to write for journal entries so...
 </p>
 
+<p>
+	
+	Journal Entry 5:
+	I finally learned how to do functions, and they actually make sense now, which is great. Before, I had gotten really confused as to what the variable did, as well as what 'appendchild' meant in general. Now, I know that you put the variable as the 'child' in the function, if that makes any sense. I really do wish that I could learn why can't I move my links away from each other, because for some reason, I am unable to do so. I think I'm going to make a lab in the future. 
+
+</p>
+
 </body>
 </html>
