--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@ a{
 	width: 100%;
 	height: 500px;
 	background-color: skyblue;
-	background-position: relative;
+	background-position: absolute;
 	bottom: 500px;
 	}
 
@@ -81,8 +81,10 @@ WELCOME TO MY WEBSITE!
 	#journal{
 	height: 300px;
 	width: 300px;
-	background-position: absolute;
-	left: 5px;
+	background-position: relative;
+	top: 5px;
+	background-color: blue;
+	z-index: 2
 	}
 
 
@@ -102,11 +104,9 @@ WELCOME TO MY WEBSITE!
 	<center>
 
 <div id="menu">
-	<div id="container">
 		<div id="journal" class ="link"><a href="journal.html">Journal</a></div>
 		<div id = "projects" class ="link"><a href="project.html">Projects</a></div>
 
-	</div>
 </div>
 
 </center>
