--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 	height: 200px;
 	margin: 0px; 
 	background-color: silver;
+
 }
 
 a{
@@ -46,6 +47,7 @@ a{
 	background-color: skyblue;
 	background-position: absolute;
 	bottom: 500px;
+
 	}
 
 	a:link {
@@ -82,7 +84,7 @@ WELCOME TO MY WEBSITE!
 	height: 300px;
 	width: 300px;
 	background-position: relative;
-	top: 5px;
+	top: 200px;
 	background-color: blue;
 	z-index: 2
 	}
@@ -101,7 +103,7 @@ WELCOME TO MY WEBSITE!
 
 	
 
-	<center>
+
 
 <div id="menu">
 		<div id="journal" class ="link"><a href="journal.html">Journal</a></div>
@@ -109,11 +111,11 @@ WELCOME TO MY WEBSITE!
 
 </div>
 
-</center>
+
 
 	<center><div id="waving"></div></center>
 
-	<div id="word"></div>
+	<center>WELCOME TO MY WEBSITE!<div id="word"></div></center>
 	<div id="stuff"></div>
 
 		
