--- a/project.html
+++ b/project.html
@@ -13,8 +13,7 @@
 	text-decoration: none;
 	font-size: 50px;
 	position: absolute;
-	top: 43%;
-	left: 20%;
+	
 
 }
 
@@ -35,9 +34,11 @@
 <body>
 
 <center><div id="projects">
-		<a href="Animation.html">Illusion Animation</a>
+		<a href="clock.html">Mask Function</a>
 		<a href="javascriptTest.html">Clock Javascript</a>
 		<a href="rainbowFunction.html">Rainbow Function</a>
+		<a href="song.html">Gift and Song function</a>
+
 	</div></center>
 
 <div id="kick"></div>
