--- a/rainbowFunction.html
+++ b/rainbowFunction.html
@@ -17,7 +17,7 @@ function makeRain(){
 
 
 	rain.addEventListener("click",function(){
-	rain.style.backgroundImage = "url(https://64.media.tumblr.com/234622efb53b2e15e271fe1197931389/tumblr_mutssiu7MI1svwlszo1_500.gifv)"
+	rain.style.backgroundImage = "url(https://64.media.tumblr.com/234622efb53b2e15e271fe1197931389/tumblr_mutssiu7MI1svwlszo1_500.gifv)";
 	rain.style.backgroundSize = "contain";
 	rain.style.backgroundRepeat = "no-repeat";
 	})
