--- a/journal.html
+++ b/journal.html
@@ -18,7 +18,7 @@
 
 		}
 
-		
+	font-family: 'Open Sans Condensed', sans-serif;
 	
 
 	</style>
@@ -32,7 +32,6 @@ Journal Entry 1:
 I’ve learned a lot about the ‘theory’ (if you could call it that) of html and CSS, but I’m not very good at applying it. We learned about the elements, the style, the structure of making a website, and many different coding words like “div” or “a” or “href”. I feel a bit frustrated by it because I think I’m doing things correctly, but nothing is really working, and I don’t know what’s wrong. I am currently working on setting up my CS1 website, but like I said in the earlier sentence, it is a bit frustrating. I’m excited to actually get my code to work, because I feel like I will be extremely proud and happy by that. My goals in the next week or two are to get my website up and running, and also start a new project, because I feel like that will be fun. 
 
 </p>
-
 <p>
 
 Journal Entry 2:
