more projects and edited website a bit

--- a/project.html
+++ b/project.html
@@ -38,6 +38,7 @@
 		<a href="javascriptTest.html">Clock Javascript</a>
 		<a href="rainbowFunction.html">Rainbow Function</a>
 		<a href="song.html">Gift and Song function</a>
+		<a href="https://docs.google.com/presentation/d/1PFskOdzEGJMx7FHpIeHLTuQUBIO_aowIS6d9Oulwpw4/edit#slide=id.p">Slideshow</a>
 
 	</div></center>
 
