--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@ a{
 
 
 	#waving:hover{
-		background-image: url(hello-hi.gif);
+		background-image: url(hello-hi2.gif);
 	}
 
 	#word{
@@ -84,6 +84,7 @@ WELCOME TO MY WEBSITE!
 	height: 300px;
 	width: 300px;
 	background-position: relative;
+	position: absolute;
 	top: 200px;
 	background-color: blue;
 	z-index: 2
