--- a/journal.html
+++ b/journal.html
@@ -24,6 +24,7 @@
 </head>
 <body>
 <center><div id="JournalEntryGif"></div></center>
+<audio id="takemeorleaveme" src="rent.mp3"></audio>
 
 
 <p>
@@ -55,6 +56,38 @@ Journal Entry 2:
 	
 	Journal Entry 5:
 	I finally learned how to do functions, and they actually make sense now, which is great. Before, I had gotten really confused as to what the variable did, as well as what 'appendchild' meant in general. Now, I know that you put the variable as the 'child' in the function, if that makes any sense. I really do wish that I could learn why can't I move my links away from each other, because for some reason, I am unable to do so. I think I'm going to make a lab in the future. 
+
+</p>
+
+<p>
+	
+	Journal Entry 6:
+	I made a javascript html where when you click the album cover of rent, the song 'take me or leave me' from rent starts playing. It's probably my favorite thing I made so far, as it actually looks clean. You can also pause the song by clicking the album cover again, and when you click the album cover it'll also change into a different version of the rent album cover. 
+
+
+</p>
+
+<p>
+	
+	Journal Entry 7:
+	I'm making a gift for my grandmother for Chinese New Year. It's turning out pretty well, and I am understanding JS a lot more now. The click-counter makes a lot more sense to me. 
+
+ 
+</p>
+
+<p>
+	
+	Journal Entry 8:
+	I finished my grandmother's gift, and I also started making this thing where if you click 100 times, only then will the div's image change. It goes from cat to dog. I also started working on p5.js which is really fun, but I'm still really confused as to how to get the colors assigned to one specific shape. I really enjoy p5.js because it has everything that I need to learn right there in the references. The thing that I started with p5.js is a ball rolling down a hill, which is really simple, but I like it. 
+
+
+</p>
+
+<p>
+	
+	Journal Entry 9:
+	I still don't understand the colors, and I'm going to ask Molly what to do in the upcoming class, but now in p5.js I'm trying to make another gift for my grandmother (bc why not), so thats fun. Here are the 10 questions we had to do for homework: https://docs.google.com/document/d/1oNivBPJZYlwy_L1aZBXWgk3f7gmQzRtW35qbagoJEN0/edit
+
 
 </p>
 
