--- a/project.html
+++ b/project.html
@@ -39,6 +39,7 @@
 		<a href="rainbowFunction.html">Rainbow Function</a>
 		<a href="song.html">Gift and Song function</a>
 		<a href="https://docs.google.com/presentation/d/1PFskOdzEGJMx7FHpIeHLTuQUBIO_aowIS6d9Oulwpw4/edit#slide=id.p">Slideshow</a>
+		<a href="chineseNewYear.html">Gift</a>
 
 	</div></center>
 
