--- a/javascriptTest.html
+++ b/javascriptTest.html
@@ -12,7 +12,7 @@ function pattern (){
 	document.body.appendChild(x);
 	x.style.width = "300px";
 	x.style.height = "300px";
-	x.style.backgroundImage = "url(https://c.tenor.com/DqdCitr-57MAAAAC/cheshire-cat-alice-in-wonderland.gif)";
+	x.style.backgroundImage = "url(http://31.media.tumblr.com/f81abb88bbd5354b6d757b211fe265fa/tumblr_n1bwbauRas1trmkp7o1_400.gif)";
 
 	x.style.backgroundSize = "contain";
 	x.style.backgroundRepeat = "no-repeat";
