--- a/project.html
+++ b/project.html
@@ -11,9 +11,22 @@
 #projects{
 	font-family: 'Open Sans Condensed', sans-serif;
 	text-decoration: none;
-	font-size: 50px;
+	font-size: 40px;
 	position: absolute;
+	top: 15%
+
 	
+
+}
+
+
+#projects2{
+font-family: 'Open Sans Condensed', sans-serif;
+	text-decoration: none;
+	font-size: 40px;
+	position: absolute;
+	left: 25%;
+	top: 15%;
 
 }
 
@@ -27,6 +40,13 @@
 	top: 55%;
 }
 
+#projectliteraltext{
+	font-family: 'Open Sans Condensed', sans-serif;
+	text-decoration: none;
+	font-size: 70px;
+	height: 
+}
+
 </style>
 
 
@@ -34,14 +54,21 @@
 <body>
 
 <center><div id="projects">
-		<a href="clock.html">Mask Function</a>
-		<a href="javascriptTest.html">Clock Javascript</a>
-		<a href="rainbowFunction.html">Rainbow Function</a>
-		<a href="song.html">Gift and Song function</a>
-		<a href="https://docs.google.com/presentation/d/1PFskOdzEGJMx7FHpIeHLTuQUBIO_aowIS6d9Oulwpw4/edit#slide=id.p">Slideshow</a>
-		<a href="chineseNewYear.html">Gift</a>
+	<div> <a href="clock.html">Mask Function</a> </div>
+	<div> <a href="javascriptTest.html">Cheshire Cat Function</a> <div>
+	<div> <a href="rainbowFunction.html">Rainbow Function</a> <div>
+	<div> <a href="song.html">Gift and Song function</a> <div>
+	<div> <a href="https://docs.google.com/presentation/d/1PFskOdzEGJMx7FHpIeHLTuQUBIO_aowIS6d9Oulwpw4/edit#slide=id.p">Slideshow</a> <div> 
+	<div> <a href="chineseNewYear.html">Gift</a> <div>
 
 	</div></center>
+
+<div id="projectliteraltext">Projects!</div>
+
+<center><div id="projects2">
+	<div> <a href="sun.html">WIP Weather thingy</a></div>
+	<div><a href="photos.html">Photo Portfolio</a></div>
+</div></center>
 
 <div id="kick"></div>
 </body>
