--- a/index.html
+++ b/index.html
@@ -41,14 +41,22 @@ a{
 		background-image: url(hello-hi2.gif);
 	}
 
-	#word{
-	width: 100%;
-	height: 500px;
-	background-color: skyblue;
-	background-position: absolute;
-	bottom: 500px;
 
-	}
+#project{
+position: absolute;
+left: 7px;
+top: 3px;
+
+}
+
+
+#word{
+
+	font-family: 'Open Sans Condensed', sans-serif;
+	text-decoration: none;
+	font-size: 30px
+
+}
 
 	a:link {
   color: cadetblue;
@@ -63,32 +71,12 @@ a:visited {
 
 
 
-body{
-	margin: 0px;
-	}
 
-	#stuff{
-	height: 200px;
-	width: 200px
-}
 
-href #aboutme.html
+	
 
-<p>
 
-WELCOME TO MY WEBSITE!
 
-</p>
-
-	#journal{
-	height: 300px;
-	width: 300px;
-	background-position: relative;
-	position: absolute;
-	top: 200px;
-	background-color: blue;
-	z-index: 2
-	}
 
 
 </style>
@@ -106,11 +94,7 @@ WELCOME TO MY WEBSITE!
 
 
 
-<div id="menu">
-		<div id="journal" class ="link"><a href="journal.html">Journal</a></div>
-		<div id = "projects" class ="link"><a href="project.html">Projects</a></div>
-
-</div>
+<div id="menu"></div>
 
 
 
@@ -119,7 +103,9 @@ WELCOME TO MY WEBSITE!
 	<center>WELCOME TO MY WEBSITE!<div id="word"></div></center>
 	<div id="stuff"></div>
 
-		
+	<div id="journal"><a href="journal.html">Journal</a></div>
+	<div id="project"><a href="projects.html">Projects</a></div>
+
 
 
 </body>
